<resources>
    <string name="app_name">Utsikt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="current_beach_name">Name of current beach</string>
    <string name="weather_symbol">Weather Symbol</string>
    <string name="wind_list">wind</string>
    <string name="water_list">water</string>
    <string name="air_list">air</string>
    <string name="water_symbol_list">Water Symbol</string>
    <string name="sock_list">Wind_sock_symbol_list</string>
    <string name="air_temp_list">Air Temperature List</string>
    <string name="fav_btn_list">Favorite Button</string>
    <string name="time_forecast">Time</string>
    <string name="air_forecast">air</string>
    <string name="wind_forecast">wind</string>
    <string name="rain_forecast">rain</string>
    <string name="weather_vec_forecast">Weather Vector forecast</string>
    <string name="air_temp_forecast">Air Temp forecast</string>
    <string name="wind_sock_forecast">Wind Sock</string>
    <string name="rain_symbol_forecast">Rain Symbol</string>
    <string name="name_detailed">BEACH NAME</string>
    <string name="weather_vector_detailed">Weather Vector</string>
    <string name="airTemp_detailed">TextView</string>
    <string name="watertemp_detailed">TextView</string>
    <string name="rain_detailed">TextView</string>
    <string name="uv_detailed">TextView</string>
    <string name="air_temperature_symbol_detailed">Air Temperature Symbol</string>
    <string name="water_temperature_symbol_detailed">Water Temperature Symbol</string>
    <string name="rain_symbol_detailed">Rain Symbol</string>
    <string name="uv_symbol_detailed">UV Symbol</string>
    <string name="wind_sock_symbol_detailed">Wind Sock Symbol</string>
    <string name="air_sock_detailed">TextView</string>
    <string name="cloud_detailed">TextView</string>
    <string name="cloud_symbol_detailed">Cloud Symbol</string>
    <string name="swimming_symbol_detailed">Swimming Symbol</string>
    <string name="swimming_detailed">TextView</string>
    <string name="title_gmaps_window">Dette er en ganske lang tittel</string>
    <string name="water_gmaps_window">water</string>
    <string name="wind_gmaps_window">wind</string>
    <string name="air_gmaps_window">air</string>
    <string name="wind_sock_symbol_Gmaps_window">Wind Sock Symbol</string>
    <string name="water_symbol_Gmaps_window">Water Symbol</string>
    <string name="weather_symbol_vector_gmaps_window">Weather Symbol Vector</string>
    <string name="clickable_Gmaps_window">Clickable</string>
    <string name="air_temperature_symbol_Gmaps_window">Air Temperature Symbol</string>
    <string name="change_chart_button_chart">Change Chart Button</string>
    <string name="weahter_condition_chart">WEAHTER CONDITION</string>
    <string name="x_nx_nx_n_chart">x\nx\nx\n</string>
    <string name="left_arrow_graph">Left Arrow</string>
    <string name="right_arrow_graph">Right Arrow</string>
    <string name="beach_name_general">TextView</string>
    <string name="water_quality_general">Text view</string>
    <string name="badevannskvalitet_general">Badevannskvalitet</string>
    <string name="facility_list_general">TextView</string>
    <string name="transport_general">Transport og parkering</string>
    <string name="kilde_general">All informasjonen på denne siden er hentet fra Oslo kommune sine nettsider</string>
    <string name="fasiliteter_general">Fasiliteter</string>
    <string name="beach_desc_general">TextView</string>
    <string name="transport_desc_general">TextView</string>
    <string name="beachDescHeader_general">Beskrivelse av badestedet</string>
    <string name="button_star_list">Button Star</string>
    <string name="kilde_liste">Based on data from MET Norway</string>
    <string name="kilde_gmaps_fragment">Based on data from MET Norway</string>
</resources>
