<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    app:cardBackgroundColor="@color/dark2"
    android:layout_margin="3dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    app:cardCornerRadius="13dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/time_forecast"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air_forecast"
            android:textSize="18sp"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/imageView9"
            app:layout_constraintStart_toEndOf="@+id/imageView9" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_forecast"
            android:textSize="18sp"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
            app:layout_constraintStart_toEndOf="@+id/imageView10" />

        <TextView
            android:id="@+id/rain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rain_forecast"
            android:textSize="18sp"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/imageView11"
            app:layout_constraintStart_toEndOf="@+id/imageView11" />

        <ImageView
            android:id="@+id/symbol"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/common_google_signin_btn_icon_light"
            android:contentDescription="@string/weather_vec_forecast"/>

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/thermometer_1f321"
            android:contentDescription="@string/air_temp_forecast"/>

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="31dp"
            android:layout_height="25dp"
            android:layout_marginStart="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/temp"
            app:layout_constraintStart_toEndOf="@+id/temp"
            app:srcCompat="@drawable/windsock"
            android:contentDescription="@string/wind_sock_forecast"/>

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="32dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/wind"
            app:layout_constraintStart_toEndOf="@+id/wind"
            app:srcCompat="@drawable/rain_icon"
            android:contentDescription="@string/rain_symbol_forecast"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>