<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/beachcard"
    android:layout_width="match_parent"
    android:layout_height="199dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cardview_background">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/beachTitle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:text="@string/current_beach_name"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_misc"
                android:layout_width="123dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/weatherSymbol"
                    android:layout_width="59dp"
                    android:layout_height="51dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/weather_symbol"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/wind_list"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/windSymbol"
                    app:layout_constraintStart_toEndOf="@+id/windSymbol" />

                <TextView
                    android:id="@+id/OceanTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/water_list"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/oceanTempSymbol"
                    app:layout_constraintStart_toEndOf="@+id/oceanTempSymbol" />

                <TextView
                    android:id="@+id/airTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/air_list"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/airTempSymbol"
                    app:layout_constraintStart_toEndOf="@+id/airTempSymbol" />

                <ImageView
                    android:id="@+id/oceanTempSymbol"
                    android:layout_width="35dp"
                    android:layout_height="34dp"
                    android:layout_marginBottom="4dp"
                    android:contentDescription="@string/water_symbol_list"
                    app:layout_constraintBottom_toTopOf="@+id/windSymbol"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/droplet_1f4a7" />

                <ImageView
                    android:id="@+id/windSymbol"
                    android:layout_width="35dp"
                    android:layout_height="34dp"
                    android:layout_marginBottom="4dp"
                    android:contentDescription="@string/sock_list"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/windsock" />

                <ImageView
                    android:id="@+id/airTempSymbol"
                    android:layout_width="35dp"
                    android:layout_height="33dp"
                    android:layout_marginBottom="4dp"
                    android:contentDescription="@string/air_temp_list"
                    app:layout_constraintBottom_toTopOf="@+id/oceanTempSymbol"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weatherSymbol"
                    app:srcCompat="@drawable/thermometer_1f321" />

                <ImageButton
                    android:id="@+id/favouriteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:background="@null"
                    android:contentDescription="@string/fav_btn_list"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/btn_star_big_off" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
